# agent-power-tools

./: .gitignore  BUGFIX_SUMMARY.md  CHANGELOG.md  Cargo.toml  EXAMPLES.md  LIBRARY_ANALYSIS.md  README.md  RELEASE.md  RELEASING.md  SEMANTIC_REFACTORING_PLAN.md  WISHLIST.md  index.python.scip  index.rust.scip  install.sh  mcp-config.json  setup.sh  test_cursor.rs  test_inline.rs
powertools-cli/: Cargo.toml  README.md  index.rust.scip
powertools-cli/src/: main.rs
powertools-cli/src/analyzers/: class_finder.rs  function_finder.rs  mod.rs  pattern_matcher.rs  tree_sitter_analyzer.rs
powertools-cli/src/commands/: batch_replace.rs  classes.rs  definition.rs  functions.rs  index.rs  inline_variable.rs  mod.rs  references.rs  rename_symbol.rs  search_ast.rs  stats.rs  watch.rs
powertools-cli/src/core/: error.rs  location.rs  mod.rs  output.rs  types.rs
powertools-cli/src/indexers/: lsp_client.rs  lsp_query.rs  mod.rs  scip_indexer.rs  scip_query.rs  scip_query_simple.rs  swift_lsp.rs  unified_query.rs
powertools-cli/src/mcp/: mod.rs  server.rs  tools.rs
powertools-cli/src/refactor/: inline.rs  mod.rs  preview.rs  rename.rs  replacer.rs  transaction.rs  unified_refactor.rs
powertools-cli/src/watcher/: filters.rs  metadata.rs  mod.rs
synthia/: .gitignore  ARCHITECTURE.md  COLOR_PALETTE.md  COMMIT_MESSAGE.txt  CONFIG.md  CURSOR_FIX.md  Cargo.toml  EDIT_APPROVAL_PLAN.md  FINE_TUNING_PLAN.md  FIXES.md  LINE_WRAP_DEBUGGING.md  P1_TESTING_GUIDE.md  P2_TESTING_GUIDE.md  README.md  TASK5_IMPLEMENTATION_SUMMARY.md  TASK_4_IMPLEMENTATION_SUMMARY.md  TRAINING_DATA_IMPROVEMENTS.md  build.rs  check_build.sh  config.toml  config.toml.example  generate_superpowers_examples.py  index.rust.scip  test_compilation.sh
synthia/.claude/agents/: dataset-generator-agentic.md  (+11 more)
synthia/docs/: CONFIGURATION.md  DATASET_COMPLETE_SUMMARY.md  DATASET_GENERATION_SUMMARY.md  EDIT_APPROVAL.md  INTEGRATION_VERIFICATION.md  OPUS_IMPROVEMENTS_PLAN.md  P1_TEST_RESULTS.md  PARALLEL_TOOL_EXECUTION.md  README.md  SUPERPOWERS_SKILLS_MAPPING.md  SYNTHIA_MD_GUIDE.md  TRAINING_DATA_UPDATE_SUMMARY.md  UI_ISSUES.md
synthia/fine-tuning/: .gitignore  HALLUCINATION_FIX.md  NEW_TRAINING_DATA.md  README-WINDOWS.md  README.md  SETUP_WSL2.md  TROUBLESHOOTING_SESSION_SUMMARY.md  check_qwen_template.py  convert_to_gguf.sh  dataset.jsonl  diagnose_generation_loop.py  diagnose_training.py  generate_dataset.py  generate_failure_recovery.py  generate_flask_examples.py  merge_and_export.py  merge_datasets.py  requirements.txt  setup-wsl2-updated.sh  setup.ps1  setup.sh  test_16bit_model.py  test_base_model.py  test_model.py  train.py  train_mlx.py  train_with_new_data.sh  upload-to-huggingface.sh  validate_setup.py  verify_training_format.py
synthia/prompts/: README.md  system_prompt.md
synthia/src/: config.rs  context_manager.rs  jsonl_logger.rs  lib.rs  main.rs  permission_config.rs  permission_manager.rs  project.rs  project_context.rs  session.rs  types.rs
synthia/tests/: agent_actor_project_context_test.rs  project_context_test.rs
(+90 files in other folders)
