[package]
name = "synthia"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
ratatui = "0.28"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
futures = "0.3"
url = "2.5"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
bytes = "1"
unicode-width = "0.1"
regex = "1"
lru = "0.12"
which = "6"
similar = { version = "2.3", features = ["inline"] }
shellexpand = "3.1"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1"
tempfile = "3"
